Add Sample classification functionality